<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="186dp"
        android:layout_height="52dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="164dp"
        android:text="@string/tv1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="284dp"
        android:layout_height="49dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="76dp"
        android:text="@string/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:text="@string/button2"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:onClick="CrearCuenta"
        android:text="@string/button3"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />
</androidx.constraintlayout.widget.ConstraintLayout>